adds more sections to the library

--- a/_patterns/forms/input.html
+++ b/_patterns/forms/input.html
@@ -1,14 +1,14 @@
-  <legend>Personal information</legend>
+  <legend class="pad-b-1-2 pad-t">Personal information</legend>
 
   <label for="email">Email address</label>
   <input type="email" id="email" required>
 
-  <legend>Shipping information</legend>
+  <legend class="pad-b-1-2 pad-t">Shipping information</legend>
 
-  <label>First name</label>
+  <label class="name">First name</label>
   <input type="text" name="name" id="name" required>
 
-  <label>Last name</label>
+  <label class="name">Last name</label>
   <input type="text" name="name" id="name" required>
 
   <label>Street address</label>
@@ -26,10 +26,10 @@
   <label>Phone number</label>
   <input type="tel" name="tel" id="tel" required>
 
-  <legend>More Sales!</legend>
+  <legend class="pad-b-1-2 pad-t">More Sales!</legend>
   <h6>Do you want to get emails of our future sales?</h6>
   <div>
-    <div>
+    <div class="pad-b-1-2">
       <input type="checkbox" id="yes" required>
       <label>Yes</label>
     </div>
