--- a/_patterns/forms/field-help.html
+++ b/_patterns/forms/field-help.html
@@ -1,4 +1,5 @@
-  <legend>Personal information</lengend>
-    <label>First name</name>
-    <input type="text" name="firstname" id="firstname" required aria-describedby="name-error">
-    <p class="error-message milli" id="name-error">Please provide a name</p>
+<legend class="pad-b-1-2 pad-t">Personal information</lengend>
+
+<label>First name</name>
+<input type="text" name="firstname" id="firstname" required aria-describedby="name-error">
+<p class="error-message milli" id="name-error">Please provide a name</p>
