Adds the main navigation

--- a/_patterns/sections/side-navigation.html
+++ b/_patterns/sections/side-navigation.html
@@ -1,11 +1,6 @@
 <div class="sidenav">
-  <a href="#">Home</a>
-  <a href="#">About</a>
-  <a href="#">Shop</a>
+  <a href="#">Small Plants</a>
+  <a href="#">Original Gardens</a>
+  <a href="#">Deluxe Gardens</a>
   <a href="#">Cart</a>
-</div>
-
-<div class="main">
-  <h2 class="gutter-1-2">About Us</h2>
-  <p class="gutter-1-2">We we're born because of our love for succulent plants. We wanted to be able to bring the outdoors in for you. Each of our garden is hand-planted. Each day we hand pick fresh plants to bring you the quality of our gardens. It's also a very memorable gift. There's something about opening a box and finding hand-planted plants placed neatly inside. It's a very unique gift because of it's attention to details and the sophisticated design. It's simply a gift that keeps on giving.</p>
 </div>
