Fixed the leftovers of my pattern library

--- a/_patterns/cards/basic-card.html
+++ b/_patterns/cards/basic-card.html
@@ -2,5 +2,6 @@
   <h2 class="push-0 gutter-1-2 pad-t-1-2 pad-b-1-4"><b>Explore our gardens!</b></h2>
   <p class="gutter-1-2 milli pad-b-1-4">Find a plant or garden that best suits your home and lifestyle. We garantee that you will find one that you love.</p>
   <div class="gutter-1-2 pad-b-1-4">
-    {% pattern buttons/basic %}
+    {% pattern buttons/basic text="See collection!" url="/products/" %}
   </div>
+</div>
