--- a/_patterns/cards/sectional-banner.html
+++ b/_patterns/cards/sectional-banner.html
@@ -1,14 +1,27 @@
-<div class="sectional-banner">
-  <img class="img-flex" src="/images/banners/sectional-banner.jpg" alt="">
-</div>
-<div class="sectional-banner-container text-center">
-  <h2 class="push-0 gutter-1 pad-t-1-2 pad-b"><b>Pick your garden</b></h2>
-  <p class="gutter-2 milli">View our collection of different gardens and pick one you love.</p>
-  <h2 class="push-0 gutter-1 pad-t-1-2 pad-b"><b>Wrap it up</b></h2>
-  <p class="gutter-2 milli">Wrap your beautiful garden with one of our amazing sleeves.</p>
-  <h2 class="push-0 gutter-1 pad-t-1-2 pad-b"><b>Enjoy!</b></h2>
-  <p class="gutter-2 milli">All that's left to do is enjoy your wonderful garden and show it off!</p>
-  <div class="text-center pad-b">
-    {% pattern buttons/basic %}
+<section class="section">
+  <div class="icon-list shadow center-content">
+    <ol class="list-group center-contents-horizontal grid align-middle icons">
+      <li class="home-icon island list-group-item unit xs-1 s-1 m-1-3 l-1-3 text-center">
+        <i class="icon i-96 push-1-2">
+          <img src="/images/about.svg" alt="">
+        </i>
+        <h2 class="center-text push-1-4">Pick a garden</h2>
+        <p class="milli">View our collection of different gardens and pick one you love.</p>
+      </li>
+      <li class="home-icon island list-group-item unit xs-1 s-1 m-1-3 l-1-3 text-center">
+        <i class="icon i-96 push-1-2">
+          <img src="/images/shop.svg" alt="">
+        </i>
+        <h2 class="center-text push-1-4">Wrap it up</h2>
+        <p class="milli">Wrap up your beautiful garden with one of our amazing sleeves.</p>
+      </li>
+      <li class="home-icon island list-group-item unit xs-1 s-1 m-1-3 l-1-3 text-center">
+        <i class="icon i-96 push-1-2">
+          <img src="/images/cart.svg" alt="">
+        </i>
+        <h2 class="center-text push-1-4">Enjoy!</h2>
+        <p class="milli">All that's left to do is enjoy your wonderful garden.</p>
+      </li>
+    </ol>
   </div>
-</div>
+</section>
