--- a/_patterns/header/main-navigation.html
+++ b/_patterns/header/main-navigation.html
@@ -1,6 +1,6 @@
 <header class="max-width pad-t-1-2 pad-b-1-2">
   <div class="grid grid-bottom shadow">
-    <div class="unit xs-1 s-1 m-1 l-1-4 logo island">
+    <div class="unit xs-1 s-1 m-1 l-1-4 logo island text-center">
       <a href="/">
         <img src="/images/largelogo.svg" alt="greengardens">
       </a>
@@ -14,13 +14,6 @@
           <li class="{% if page.highlight_nav == 'cart' %}current{% endif %}"><a href="#">Cart</a></li>
         </ul>
       </nav>
-    </div>
-    <div class="subnav unit xs-1 s-1 m-1 l-1 text-center text-upper micro pad-b-1-2">
-      <div class="subnav-content">
-        <a href="#company">Original Gardens</a>
-        <a href="#team">Premium Gardens</a>
-        <a href="#careers">Deluxe Gardens</a>
-      </div>
     </div>
   </div>
 </header>
