--- a/_patterns/cards/image-card.html
+++ b/_patterns/cards/image-card.html
@@ -1,47 +1,10 @@
-<div class="image-card">
-  <img class="img-flex" src="/images/succulent-2.jpg" alt="plant">
-  <div class="image-container">
-    <h2 class="push-0 gutter-1-2 text-center pad-t pad-b-1-2"><b>Small Plants</b></h2>
-    <hr class="push-0 pad-b-1-2"></hr>
-    <p class="gutter-1-2 text-center tera push-0 pad-b-1-2">20$</p>
-    <hr class="push-0 pad-b-1-4"></hr>
-    <p class="gutter-1-2 text-center tera push-0 pad-t-1-4 pad-b-1-2">4"x5"</p>
-    <hr class="push-0 pad-b-1-4"></hr>
-    <p class="gutter-1-2 text-center tera push-0 pad-t-1-4 pad-b-1-2">International shipping</p>
-    <div class="text-center pad-b-1-4">
-      {% pattern buttons/basic %}
-    </div>
-  </div>
-</div>
-
-<div class="image-card">
-  <img class="img-flex" src="/images/succulent.jpg" alt="plant">
-  <div class="image-container">
-    <h2 class="push-0 gutter-1-2 text-center pad-t pad-b-1-2"><b>Original Gardens</b></h2>
-    <hr class="push-0 pad-b-1-2"></hr>
-    <p class="gutter-1-2 text-center tera push-0 pad-b-1-2">50$</p>
-    <hr class="push-0 pad-b-1-4"></hr>
-    <p class="gutter-1-2 text-center tera push-0 pad-t-1-4 pad-b-1-2">9"x4"</p>
-    <hr class="push-0 pad-b-1-4"></hr>
-    <p class="gutter-1-2 text-center tera push-0 pad-t-1-4 pad-b-1-2">International shipping</p>
-    <div class="text-center pad-b-1-4">
-      {% pattern buttons/basic %}
-    </div>
-  </div>
-</div>
-
-<div class="image-card">
-  <img class="img-flex" src="/images/deluxe-garden.jpg" alt="plant">
-  <div class="image-container">
-    <h2 class="push-0 gutter-1-2 text-center pad-t pad-b-1-2"><b>Deluxe Gardens</b></h2>
-    <hr class="push-0 pad-b-1-2"></hr>
-    <p class="gutter-1-2 text-center tera push-0 pad-b-1-2">100$</p>
-    <hr class="push-0 pad-b-1-4"></hr>
-    <p class="gutter-1-2 text-center tera push-0 pad-t-1-4 pad-b-1-2">15"x6"</p>
-    <hr class="push-0 pad-b-1-4"></hr>
-    <p class="gutter-1-2 text-center tera push-0 pad-t-1-4 pad-b-1-2">Domestic shipping only</p>
-    <div class="text-center pad-b-1-4">
-      {% pattern buttons/basic %}
-    </div>
+<div class="container grid align-middle">
+  <div class="image-card unit xs-1 s-1 m-1-3 l-1-3 gutter-1-2">
+    <a href="#">
+      <img class="img-flex image pad-t-1-2" src="/images/succulent-2.jpg" alt="small garden">
+      <h1 class="text-upper milli push-0 pad-b-1-4 pad-t-1-2">Original Garden</h1>
+      <p class="kilo push-0 pad-b-1-4">This small plant doesn't need much love, but is perfect for your home</p>
+      <p class="milli"><b>20$</b></p>
+    </a>
   </div>
 </div>
