--- a/_patterns/cards/product-card.html
+++ b/_patterns/cards/product-card.html
@@ -1,38 +1,35 @@
-<div class="product-card">
-  <img class="img-flex" src="/images/succulent-2.jpg" alt="plant">
-  <div class="product-container">
-    <h2 class="push-0 gutter-1-2 pad-t-1-2"><b>Small Plants</b></h2>
-    <p class="gutter-1-2 milli push-0 pad-b-1-2">This small plant doesn't need much love, but is perfect for your home</p>
-    <hr class="push-0 pad-b-1-4"></hr>
-    <p class="gutter-1-2 text-center tera push-0 pad-b-1-2">20$</p>
-    <div class="text-center pad-b-1-4">
-      {% pattern buttons/basic %}
-    </div>
+<section class="grid text-center product-container">
+  <div class="unit xs-1 s-1 m-1-2 l-1-3">
+    <a class="hover-box block relative crop" href="#">
+      <div class="embed embed-3by2">
+        <img class="hover-box-img embed-item" src="/images/succulent-2.jpg" alt="original Garden">
+      </div>
+      <div class="hover-box-caption island-1-4 w-1 absolute">
+        <h2 class="giga push-0 not-bold">Original Gardens</h2>
+        <p class="kilo push-0">20$</p>
+      </div>
+    </a>
   </div>
-</div>
-
-<div class="product-card">
-  <img class="img-flex" src="/images/succulent.jpg" alt="plant">
-  <div class="product-container">
-    <h2 class="push-0 gutter-1-2 pad-t-1-2"><b>Original Gardens</b></h2>
-    <p class="gutter-1-2 milli push-0 pad-b-1-2">A medium size garden for a nice piece of decor inside or out of your home</p>
-    <hr class="push-0 pad-b-1-4"></hr>
-    <p class="gutter-1-2 text-center tera push-0 pad-b-1-2">50$</p>
-    <div class="text-center pad-b-1-4">
-      {% pattern buttons/basic %}
-    </div>
+  <div class="unit xs-1 s-1 m-1-2 l-1-3">
+    <a class="hover-box block relative crop" href="#">
+      <div class="embed embed-3by2">
+        <img class="hover-box-img embed-item" src="/images/succulent.jpg" alt="Premium Garden">
+      </div>
+      <div class="hover-box-caption island-1-4 w-1 absolute">
+        <h2 class="giga push-0 not-bold">Premium Gardens</h2>
+        <p class="kilo push-0">50$</p>
+      </div>
+    </a>
   </div>
-</div>
-
-<div class="product-card">
-  <img class="img-flex" src="/images/deluxe-garden.jpg" alt="plant">
-  <div class="product-container">
-    <h2 class="push-0 gutter-1-2 pad-t-1-2"><b>Deluxe Gardens</b></h2>
-    <p class="gutter-1-2 milli push-0 pad-b-1-2">This large garden is best suited for a nice touch outside your home</p>
-    <hr class="push-0 pad-b-1-4"></hr>
-    <p class="gutter-1-2 text-center tera push-0 pad-b-1-2">100$</p>
-    <div class="text-center pad-b-1-4">
-      {% pattern buttons/basic %}
-    </div>
+  <div class="unit xs-1 s-1 m-1-2 l-1-3">
+    <a class="hover-box block relative crop" href="#">
+      <div class="embed embed-3by2">
+        <img class="hover-box-img embed-item" src="/images/deluxe-garden.jpg" alt="Premium Garden">
+      </div>
+      <div class="hover-box-caption island-1-4 w-1 absolute">
+        <h2 class="giga push-0 not-bold">Deluxe Gardens</h2>
+        <p class="kilo push-0">100$</p>
+      </div>
+    </a>
   </div>
-</div>
+</section>
