--- a/_patterns/cards/top-page-banner.html
+++ b/_patterns/cards/top-page-banner.html
@@ -1,10 +1,12 @@
-<div class="top-banner">
-  <img class="img-flex" src="/images/banners/top-banner.jpg" alt="">
-</div>
-<div class="top-banner-container">
-  <h2 class="push-0 gutter-1-2 pad-t-1-2 pad-b"><b>10% off your first buy!</b></h2>
-  <p class="gutter-1-2 milli">Explore our wonderful plant collection. We have everything from house plants to outdoor gardens. Get 10% off your first purchase now!</p>
-  <div class="text-center pad-b">
-    {% pattern buttons/basic %}
+<div class="cta-banner grid relative">
+  <div class="crop unit xs-1 unit-content-center push">
+    <img class="img-flex" src="/images/banners/{{include.image}}" alt="">
+  </div>
+  <div class="unit xs-2-3 s-1-2 cta-banner-container absolute text-center pin-c">
+    <h2 class="push-0 gutter-1-2 pad-t-1-2 pad-b">Learn more about us</h2>
+    <p class="gutter-1-2 milli">What to know what we're all about? Discover more about us and our amazing plants!</p>
+    <div class="text-center pad-b">
+      {% pattern buttons/basic text="Learn More" url="/products/" %}
+    </div>
   </div>
 </div>
