--- a/_patterns/cards/image-card.html
+++ b/_patterns/cards/image-card.html
@@ -1,10 +1,7 @@
-<div class="container grid align-middle">
-  <div class="image-card unit xs-1 s-1 m-1-3 l-1-3 gutter-1-2">
-    <a href="#">
-      <img class="img-flex image pad-t-1-2" src="/images/succulent-2.jpg" alt="small garden">
-      <h1 class="text-upper milli push-0 pad-b-1-4 pad-t-1-2">Original Garden</h1>
-      <p class="kilo push-0 pad-b-1-4">This small plant doesn't need much love, but is perfect for your home</p>
-      <p class="milli"><b>20$</b></p>
-    </a>
-  </div>
+<div class="gutter-1-2">
+  <a href="/products">
+    <img class="img-flex image pad-t-1-2" src="/images/products/{{include.image}}" alt="small garden">
+    <h1 class="text-upper milli push-0 pad-b-1-4 pad-t-1-2">{{include.heading}}</h1>
+    <p class="kilo push-0 pad-b-1-4">{{include.text}}</p>
+  </a>
 </div>
