--- a/index.html
+++ b/index.html
@@ -3,3 +3,19 @@ layout: default
 ---
 
 {% pattern cards/call-to-action-banner heading="Explore our gardens!" text="Find a plant or garden that best suits your home and lifestyle. We garantee that you will find one that you love." image="cta-banner.svg" %}
+
+<div class="grid grid-middle pad-b-2">
+  <div class="unit xs-1 m-1 l-1-3">
+    {% pattern cards/image-card heading="Zebra Succulent" text="Smallest boxed succulent to make this item a piece of decor. Called the zebra succulent because of it's unique pattern on the leaves." image="smallgarden4.jpg" %}
+  </div>
+  <div class="unit xs-1 s-1 m-1 l-1-3">
+    {% pattern cards/image-card heading="Mixed Garden" text="Three beautiful succulents. A mix of three different plant. The Bliss, Original and Zebra succulent." image="originalgarden1.jpg" %}
+  </div>
+  <div class="unit xs-1 s-1 m-1 l-1-3">
+    {% pattern cards/image-card heading="Cacti" text="A beautiful tiny cacti set in a simple white box, that can decorate any room in your home." image="smallgarden1.jpg" %}
+  </div>
+</div>
+
+{% pattern sections/sections %}
+
+{% pattern cards/sectional-banner %}
