Fixes some context in the pl and the homepage

--- a/_patterns/cards/call-to-action-banner.html
+++ b/_patterns/cards/call-to-action-banner.html
@@ -1,10 +1,10 @@
 <div class="cta-banner grid relative">
-  <div class="crop unit xs-1 unit-content-center push">
+  <div class="crop unit xs-1 push">
     <img class="img-flex" src="/images/banners/{{include.image}}" alt="">
   </div>
   <div class="unit xs-2-3 s-1-2 cta-banner-container absolute text-center pin-c">
     <h2 class="push-0 gutter-1-2 pad-t-1-2 pad-b">{{include.heading}}</h2>
-    <p class="gutter-1-2 milli">{{include.text}}</p>
+    <p class="gutter-1-2 kilo">{{include.text}}</p>
     <div class="text-center pad-b">
       {% pattern buttons/basic text="See collection!" url="/products/" %}
     </div>
