--- a/_patterns/header/main-navigation.html
+++ b/_patterns/header/main-navigation.html
@@ -1,8 +1,8 @@
-<header class="max-width pad-t-1-2 pad-b-1-2">
-  <div class="grid grid-bottom shadow">
+<header class="main-nav max-width pad-t-1-2 pad-b-1-2">
+  <div class="grid grid-bottom">
     <div class="unit xs-1 s-1 m-1 l-1-4 logo island text-center">
       <a href="/">
-        <img src="/images/largelogo.svg" alt="greengardens">
+        <img src="/images/largelogo1.svg" alt="greengardens">
       </a>
     </div>
     <div class="unit xs-1 s-1 m-1 l-3-4 pad-b-1-4">
