--- a/_patterns/cards/image-card.html
+++ b/_patterns/cards/image-card.html
@@ -1,7 +1,7 @@
-<div class="gutter-1-2">
+<div class=" image-card gutter-1-2">
   <a href="/products">
     <img class="img-flex image pad-t-1-2" src="/images/products/{{include.image}}" alt="small garden">
-    <h1 class="text-upper milli push-0 pad-b-1-4 pad-t-1-2">{{include.heading}}</h1>
-    <p class="kilo push-0 pad-b-1-4">{{include.text}}</p>
+    <h1 class="text-upper kilo push-0 pad-b-1-4 pad-t-1-2">{{include.heading}}</h1>
+    <p class="kilo push-0 pad-b-1-4 milli">{{include.text}}</p>
   </a>
 </div>
