--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -1,33 +1,43 @@
-<footer class="footer">
-  <div class="grid max-width micro pad-top gutter">
-    <div class="unit xs-1 s-1 m-1 l-1 push-0">
-      <h1 class="text-center push-0">Have any questions?</h1>
-    </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
-      <h3 class="milli text-center bold push-1-4 text-upper">Contact us</h3>
-      <div class="text-center">
-        {% pattern buttons/basic text="Email us" url="/products/" %}
+<footer role="contentinfo">
+    <div class="grid max-width micro pad-top gutter">
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 push">
+        <h3 class="kilo bold push-1-4">Visit Us</h3>
+        <ul class="list-group">
+          <li>GreenGardens</li>
+          <li>135 Laurier St. Casselman, ON</li>
+          <li>613-869-8116</li>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 push">
+        <h3 class="kilo bold push-1-4">Site Map</h3>
+        <ul class="list-group block push-0">
+          <li>
+            <a href="index.html">About</a>
+          </li>
+          <li>
+            <a href="rescues.html">Shop</a>
+          </li>
+          <li>
+            <a href="adopt.html">Care Guide</a>
+          </li>
+          <li>
+            <a href="#">Cart</a>
+          </li>
+        </ul>
+      </div>
+      <div class="unit xs-1 s-1 m-1-3 l-1-3 push">
+        <h3 class="kilo bold push-1-4">Social Media</h3>
+        <ul class="list-group">
+          <li>
+            <a href="https://www.facebook.com/">Facebook</a>
+          </li>
+          <li>
+            <a href="https://www.instagram.com/?hl=en">Instagram</a>
+          </li>
+          <li>
+            <a href="https://twitter.com/?lang=en">Twitter</a>
+          </li>
+        </ul>
       </div>
     </div>
-    <div class="unit xs-1 s-1 m-1-2 l-1-2 island">
-      <h3 class="milli text-center text-upper bold push-1-4">Social Media</h3>
-      <div class="text-center">
-        <a href="https://www.facebook.com/">
-          <i class="icon i-32">
-            <svg><use xlink:href="/images/icons.svg#facebook"/></svg>
-          </i>
-        </a>
-        <a href="https://www.instagram.com/">
-          <i class="icon i-32">
-            <svg><use xlink:href="/images/icons.svg#instagram"/></svg>
-          </i>
-        </a>
-        <a href="https://www.twitter.com/">
-          <i class="icon i-32">
-            <svg><use xlink:href="/images/icons.svg#twitter"/></svg>
-          </i>
-        </a>
-      </div>
-    </div>
-  </div>
-</footer>
+  </footer>
