--- a/index.html
+++ b/index.html
@@ -2,20 +2,22 @@
 layout: default
 ---
 
-{% pattern cards/call-to-action-banner heading="Explore our gardens!" text="Find a plant or garden that best suits your home and lifestyle. We garantee that you will find one that you love." image="cta-banner.svg" %}
+{% pattern cards/call-to-action-banner heading="Explore our gardens!" text="Find a plant or garden that best suits your home and lifestyle. We garantee that you will find one that you love." image="cta-banner1.svg" %}
 
-<div class="grid grid-middle pad-b-2">
+<div class="grid grid-middle image-card-container pad-b-2">
   <div class="unit xs-1 m-1 l-1-3">
-    {% pattern cards/image-card heading="Zebra Succulent" text="Smallest boxed succulent to make this item a piece of decor. Called the zebra succulent because of it's unique pattern on the leaves." image="smallgarden4.jpg" %}
+    {% pattern cards/image-card heading="Small Gardens" text="These small gardens are the smallest we sell, sitting in a 4 by 5 box. Great pieces to add on desks or end tables, at great prices." image="smallgarden4.jpg" %}
   </div>
   <div class="unit xs-1 s-1 m-1 l-1-3">
-    {% pattern cards/image-card heading="Mixed Garden" text="Three beautiful succulents. A mix of three different plant. The Bliss, Original and Zebra succulent." image="originalgarden1.jpg" %}
+    {% pattern cards/image-card heading="Original Gardens" text="Three beautiful succulents boxed perfectly in a 9 by 4 inch box. This piece would be great for any center piece for any occasion." image="originalgarden1.jpg" %}
   </div>
   <div class="unit xs-1 s-1 m-1 l-1-3">
-    {% pattern cards/image-card heading="Cacti" text="A beautiful tiny cacti set in a simple white box, that can decorate any room in your home." image="smallgarden1.jpg" %}
+    {% pattern cards/image-card heading="Deluxe Gardens" text="These deluxe gardens are the biggest boxed plants we sell. Coming in a 15 by 6 box. Boxed with a mixture of succulents" image="deluxegarden1.jpg" %}
   </div>
 </div>
 
-{% pattern sections/sections %}
+<div class="pad-b">
+  {% pattern sections/sections %}
+</div>
 
 {% pattern cards/sectional-banner %}
