Adds a category to product page

--- a/_patterns/sections/side-navigation.html
+++ b/_patterns/sections/side-navigation.html
@@ -2,7 +2,7 @@
   <div class="grid grid-bottom shadow">
     <div class="unit xs-1 s-1 m-1 l-1-4 logo island">
       <a href="/">
-        <img src="/images/largelogo.svg" alt="greengardens">
+        <img src="/images/largelogo1.svg" alt="greengardens">
       </a>
     </div>
     <div class="unit xs-1 s-1 m-1 l-3-4 pad-b-1-4">
@@ -17,9 +17,9 @@
     </div>
     <div class="subnav unit xs-1 s-1 m-1 l-1 text-center text-upper micro pad-b-1-2">
       <div class="subnav-content">
-        <a href="#company">Original Gardens</a>
-        <a href="#team">Premium Gardens</a>
-        <a href="#careers">Deluxe Gardens</a>
+        <a class="gutter" href="#company">Original Gardens</a>
+        <a class="gutter" href="#team">Premium Gardens</a>
+        <a class="gutter" href="#careers">Deluxe Gardens</a>
       </div>
     </div>
   </div>
