--- a/_patterns/cards/sectional-banner.html
+++ b/_patterns/cards/sectional-banner.html
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section-banner">
   <div class="icon-list shadow center-content">
     <ol class="list-group center-contents-horizontal grid align-middle icons">
       <li class="home-icon island list-group-item unit xs-1 s-1 m-1-3 l-1-3 text-center">
