--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -1,4 +1,4 @@
-<footer role="contentinfo">
+<footer role="contentinfo" class="footer">
     <div class="grid max-width micro pad-top gutter">
       <div class="unit xs-1 s-1 m-1-3 l-1-3 push">
         <h3 class="kilo bold push-1-4">Visit Us</h3>
