--- a/products.html
+++ b/products.html
@@ -5,11 +5,34 @@ highlight_nav: shop
 
 {% pattern cards/top-page-banner heading="Learn more about us" text="Want to know what greengardens is all about? Discover more about us and our amazing plants!" image="cta-banner2.svg" %}
 
+<h1 class="text-center">Small Gardens</h1>
 <div class="grid grid-middle gutter-1-4">
   {% for product in site.products %}
-  <div class="unit xs-1 s-1 m-1-2 island">
-    {% pattern cards/product-card data=product %}
-  </div>
+    {% if product.category == 'small-gardens' %}
+    <div class="unit xs-1 s-1 m-1-2 island">
+      {% pattern cards/product-card data=product %}
+    </div>
+    {% endif %}
+  {% endfor %}
+</div>
+<h1 class="text-center">Original Gardens</h1>
+<div class="grid grid-middle gutter-1-4">
+  {% for product in site.products %}
+    {% if product.category == 'original-gardens' %}
+    <div class="unit xs-1 s-1 m-1-2 island">
+      {% pattern cards/product-card data=product %}
+    </div>
+    {% endif %}
+  {% endfor %}
+</div>
+<h1 class="text-center">Deluxe Gardens</h1>
+<div class="grid grid-middle gutter-1-4">
+  {% for product in site.products %}
+    {% if product.category == 'deluxe-gardens' %}
+    <div class="unit xs-1 s-1 m-1-2 island">
+      {% pattern cards/product-card data=product %}
+    </div>
+    {% endif %}
   {% endfor %}
 </div>
 
