Saves the category correctly

--- a/products.html
+++ b/products.html
@@ -8,7 +8,7 @@ highlight_nav: shop
 <h1 class="text-center">Small Gardens</h1>
 <div class="grid grid-middle gutter-1-4">
   {% for product in site.products %}
-    {% if product.category == 'small-gardens' %}
+    {% if product.category == 'Small Gardens' %}
     <div class="unit xs-1 s-1 m-1-2 island">
       {% pattern cards/product-card data=product %}
     </div>
@@ -18,7 +18,7 @@ highlight_nav: shop
 <h1 class="text-center">Original Gardens</h1>
 <div class="grid grid-middle gutter-1-4">
   {% for product in site.products %}
-    {% if product.category == 'original-gardens' %}
+    {% if product.category == 'Original Gardens' %}
     <div class="unit xs-1 s-1 m-1-2 island">
       {% pattern cards/product-card data=product %}
     </div>
@@ -28,7 +28,7 @@ highlight_nav: shop
 <h1 class="text-center">Deluxe Gardens</h1>
 <div class="grid grid-middle gutter-1-4">
   {% for product in site.products %}
-    {% if product.category == 'deluxe-gardens' %}
+    {% if product.category == 'Deluxe Gardens' %}
     <div class="unit xs-1 s-1 m-1-2 island">
       {% pattern cards/product-card data=product %}
     </div>
