--- a/_patterns/forms/phone.html
+++ b/_patterns/forms/phone.html
@@ -6,12 +6,12 @@
 </div>
 
 <div class="max-length island">
-  <div class="unit xs-1 s-1 m-1-2 island-1-4 left push-1-2">
-    <label for="name">First Name</label>
-    <input id="name" required>
-  </div>
   <div class="unit xs-1 s-1 m-1-2 island-1-4 left push">
-    <label for="lastname">Last Name</label>
-    <input id="lastname" required>
+    <label for="phone">Phone Number</label>
+    <input id="phone" required>
+  </div>
+  <div class="unit xs-1 s-1 m-1-2 island-1-4 left push-1-2">
+    <label for="email">Email</label>
+    <input id="email" required>
   </div>
 </div>
