Adds text to the config

--- a/_patterns/forms/confirmation.html
+++ b/_patterns/forms/confirmation.html
@@ -2,6 +2,6 @@
   <input type="checkbox" id="agree" required>
   <label class="push" for="agree">Information above is correct</label>
   <div class="max-length pad-t-2">
-    (button)
+    {% pattern buttons/light text="Purchase" url="/products/" %}
   </div>
 </div>
