Fix some more details

--- a/_patterns/forms/confirmation.html
+++ b/_patterns/forms/confirmation.html
@@ -1,7 +1,7 @@
-<div class="max-length pad-t-1-2 push-2 island">
+<div class="max-length pad-t-1-2 push-2 island text-center">
   <input type="checkbox" id="agree" required>
   <label class="push" for="agree">Information above is correct</label>
-  <div class="max-length pad-t-2">
+  <div class="max-length pad-t-2 text">
     {% pattern buttons/light text="Purchase" url="/products/" %}
   </div>
 </div>
