--- a/checkout.html
+++ b/checkout.html
@@ -1,16 +1,16 @@
 ---
 layout: default
 ---
-<div class="grid">
+<div class="grid gutter">
   <div class="unit [ xs-1 ]">
-    <h2>Contact Information</h2>
+    <h2 class="push-none">Contact Information</h2>
     {% pattern forms/email title="Email" %}
   </div>
 
   <div class="unit [ xs-1 ]">
     <div class="grid">
       <div class="unit [ xs-1 ]">
-        <h2>Shipping Information</h2>
+        <h2 class="push-none">Shipping Information</h2>
       </div>
       <div class="unit [ xs-1 l-1-2 ]">
         <h2>{% pattern forms/input title="First Name" %}</h2>
@@ -39,20 +39,8 @@ layout: default
       <div class="unit [ xs-1 ]">
         {% pattern forms/textarea title="Write a message" %}
       </div>
-    </div>
-    <div class="grid">
-      <div class="unit [ xs-1 l-1-2 ]">
-        IMAGE
-      </div>
-      <div class="unit [ xs-1 l-1-2 ]">
-        <h3>Subtotal: $50</h3>
-        <h3>Free Shipping</h3>
-      </div>
       <div class="unit [ xs-1 ]">
         {% pattern forms/confirmation title="I agree with the information above" %}
-      </div>
-      <div class="unit [ xs-1 ]">
-        {% pattern buttons/basic text="Purchase!" url="/products/" %}
       </div>
     </div>
   </div>
