Edits the forms

--- a/_patterns/forms/phone.html
+++ b/_patterns/forms/phone.html
@@ -1,4 +1,4 @@
-<div class="max-length island">
+<div class="island">
   <div class="unit xs-1 s-1 m-1-2 island-1-4 left push">
     <label for="phone">Phone Number</label>
     <input id="phone" required>
