--- a/_patterns/forms/provinces.html
+++ b/_patterns/forms/provinces.html
@@ -1,4 +1,4 @@
-<div class="push-1-2 max-length island">
+<div class="push-1-2 island">
   <label for="province">Province</label>
   <select id="province">
     <option>(Select one)</option>
