Takes out styling for the forms

--- a/_patterns/forms/confirmation.html
+++ b/_patterns/forms/confirmation.html
@@ -1,7 +1,7 @@
-<div class="pad-t-1-2 push-2 island text-center">
+<div>
   <input type="checkbox" id="agree" required>
-  <label class="push" for="agree">Information above is correct</label>
-  <div class="pad-t-2 text">
+  <label for="agree">Information above is correct</label>
+  <div class="text">
     {% pattern buttons/light text="Purchase" url="/products/" %}
   </div>
 </div>
