--- a/_patterns/forms/textarea.html
+++ b/_patterns/forms/textarea.html
@@ -1,4 +1,4 @@
-<div class="push-1-2 island">
+<div>
   <label for="details">Write a message with your gift</label>
-  <textarea class="pab-b-2" id="details" required></textarea>
+  <textarea id="details" required></textarea>
 </div>
