--- a/_patterns/forms/email.html
+++ b/_patterns/forms/email.html
@@ -1,5 +1,5 @@
-<div class="island">
-  <div class="unit xs-1 s-1 m-1-2 island-1-4 push-1-2">
+<div>
+  <div>
     <label for="email">Email</label>
     <input id="email" required>
   </div>
