--- a/_patterns/forms/phone.html
+++ b/_patterns/forms/phone.html
@@ -1,5 +1,5 @@
-<div class="island">
-  <div class="unit xs-1 s-1 m-1-2 island-1-4 push">
+<div>
+  <div>
     <label for="phone">Phone Number</label>
     <input id="phone" required>
   </div>
