--- a/checkout.html
+++ b/checkout.html
@@ -13,25 +13,25 @@ layout: default
         <h2 class="push-none">Shipping Information</h2>
       </div>
       <div class="unit [ xs-1 l-1-2 ]">
-        <h2>{% pattern forms/input title="First Name" %}</h2>
+        {% pattern forms/input title="First Name" %}
       </div>
       <div class="unit [ xs-1 l-1-2 ]">
-        <h2>{% pattern forms/input title="Last Name" %}</h2>
+        {% pattern forms/input title="Last Name" %}
       </div>
       <div class="unit [ xs-1 ]">
-        <h2>{% pattern forms/input title="Address" %}</h2>
+        {% pattern forms/input title="Address" %}
       </div>
       <div class="unit [ xs-1 l-1-2 ]">
-        <h2>{% pattern forms/input title="City" %}</h2>
+        {% pattern forms/input title="City" %}
       </div>
       <div class="unit [ xs-1 l-1-2 ]">
-        <h2>{% pattern forms/provinces %}</h2>
+        {% pattern forms/provinces %}
       </div>
       <div class="unit [ xs-1 l-1-2 ]">
-        <h2>{% pattern forms/input title="Country" %}</h2>
+        {% pattern forms/input title="Country" %}
       </div>
       <div class="unit [ xs-1 l-1-2 ]">
-        <h2>{% pattern forms/input title="Postal Code" %}</h2>
+        {% pattern forms/input title="Postal Code" %}
       </div>
       <div class="unit [ xs-1 ]">
         {% pattern forms/phone title="Phone Number" %}
