--- a/checkout.html
+++ b/checkout.html
@@ -2,44 +2,46 @@
 layout: default
 ---
 <div class="grid gutter">
-  <div class="unit [ xs-1 ]">
-    <h2 class="push-none">Contact Information</h2>
-    {% pattern forms/email title="Email" %}
+  <div class="pad-b unit [ xs-1 ]">
+      {% pattern forms/email title="Email" %}
+    </div>
   </div>
 
   <div class="unit [ xs-1 ]">
     <div class="grid">
-      <div class="unit [ xs-1 ]">
-        <h2 class="push-none">Shipping Information</h2>
+      <div class="island-1-4 unit [ xs-1 ]">
+        <h2 class="push-none pad-b-1-8">Shipping Information</h2>
       </div>
-      <div class="unit [ xs-1 l-1-2 ]">
+      <div class="island-1-4 pad-b unit [ xs-1 s-1 m-1-2 l-1-2 ]">
         {% pattern forms/input title="First Name" %}
       </div>
-      <div class="unit [ xs-1 l-1-2 ]">
+      <div class="island-1-4 pad-b unit [ xs-1 s-1 m-1-2 l-1-2 ]">
         {% pattern forms/input title="Last Name" %}
       </div>
-      <div class="unit [ xs-1 ]">
+      <div class="island-1-4 pad-b unit [ xs-1 ]">
         {% pattern forms/input title="Address" %}
       </div>
-      <div class="unit [ xs-1 l-1-2 ]">
+      <div class="island-1-4 pad-b unit [ xs-1 s-1 m-1-2 l-1-2 ]">
         {% pattern forms/input title="City" %}
       </div>
-      <div class="unit [ xs-1 l-1-2 ]">
+      <div class="island-1-4 pad-b unit [ xs-1 s-1 m-1-2 l-1-2 ]">
         {% pattern forms/provinces %}
       </div>
-      <div class="unit [ xs-1 l-1-2 ]">
+      <div class="island-1-4 pad-b unit [ xs-1 s-1 m-1-2 l-1-2 ]">
         {% pattern forms/input title="Country" %}
       </div>
-      <div class="unit [ xs-1 l-1-2 ]">
+      <div class="island-1-4 pad-b unit [ xs-1 s-1 m-1-2 l-1-2 ]">
         {% pattern forms/input title="Postal Code" %}
       </div>
-      <div class="unit [ xs-1 ]">
+      <div class="island-1-4 pad-b unit [ xs-1 ]">
         {% pattern forms/phone title="Phone Number" %}
       </div>
-      <div class="unit [ xs-1 ]">
+      <div class="island-1-4 pad-b unit [ xs-1 ]">
         {% pattern forms/textarea title="Write a message" %}
       </div>
-      <div class="unit [ xs-1 ]">
+    </div>
+    <div class="grid pad-t">
+      <div class="island-1-4 pad-b unit [ xs-1 ]">
         {% pattern forms/confirmation title="I agree with the information above" %}
       </div>
     </div>
