Add padding to grid

--- a/checkout.html
+++ b/checkout.html
@@ -3,6 +3,8 @@ layout: default
 ---
 <div class="grid gutter">
   <div class="pad-b unit [ xs-1 ]">
+    <h2 class="island-1-4 push-none pad-b-1-4">Contact Information</h2>
+    <div class="island-1-4">
       {% pattern forms/email title="Email" %}
     </div>
   </div>
