Adds tags to forms

--- a/_patterns/forms/confirmation.html
+++ b/_patterns/forms/confirmation.html
@@ -1,6 +1,6 @@
 <div>
   <input type="checkbox" id="agree" required>
-  <label for="agree">Information above is correct</label>
+  <label for="agree">{{include.text}}</label>
   <div class="text">
     {% pattern buttons/light text="Purchase" url="/products/" %}
   </div>
