--- a/_patterns/forms/email.html
+++ b/_patterns/forms/email.html
@@ -1,6 +1,6 @@
 <div>
   <div>
-    <label for="email">Email</label>
+    <label for="email">{{include.text}}</label>
     <input id="email" required>
   </div>
 </div>
