--- a/_patterns/forms/input.html
+++ b/_patterns/forms/input.html
@@ -1,6 +1,6 @@
 <div>
   <div>
-    <label for="name">First Name</label>
+    <label for="name">{{include.text}}</label>
     <input id="name" required>
   </div>
 </div>
