--- a/_patterns/forms/phone.html
+++ b/_patterns/forms/phone.html
@@ -1,6 +1,6 @@
 <div>
   <div>
-    <label for="phone">Phone Number</label>
+    <label for="phone">{{include.text}}</label>
     <input id="phone" required>
   </div>
 </div>
