--- a/_patterns/forms/provinces.html
+++ b/_patterns/forms/provinces.html
@@ -1,5 +1,5 @@
 <div>
-  <label for="province">Province</label>
+  <label for="province">{{include.text}}</label>
   <select id="province">
     <option>(Select one)</option>
     <option>Alberta</option>
