--- a/_patterns/forms/textarea.html
+++ b/_patterns/forms/textarea.html
@@ -1,4 +1,4 @@
 <div>
-  <label for="details">Write a message with your gift</label>
+  <label for="details">{{include.text}}</label>
   <textarea id="details" required></textarea>
 </div>
