--- a/checkout.html
+++ b/checkout.html
@@ -15,7 +15,7 @@ layout: default
         <h2 class="push-none pad-b-1-8">Shipping Information</h2>
       </div>
       <div class="island-1-4 pad-b unit [ xs-1 s-1 m-1-2 l-1-2 ]">
-        {% pattern forms/input title="First Name" %}
+        {% pattern forms/input text="First Name" %}
       </div>
       <div class="island-1-4 pad-b unit [ xs-1 s-1 m-1-2 l-1-2 ]">
         {% pattern forms/input title="Last Name" %}
