--- a/_patterns/forms/provinces.html
+++ b/_patterns/forms/provinces.html
@@ -1,19 +1,19 @@
 <div>
   <label for="province">{{include.text}}</label>
   <select id="province">
-    <option>(Select one)</option>
-    <option>Alberta</option>
-    <option>British Columbia</option>
-    <option>Manitoba</option>
-    <option>New Brunswick</option>
-    <option>Newfounland and Labrador</option>
-    <option>Northwest Territories</option>
-    <option>Nova Scotia</option>
-    <option>Nunavut</option>
-    <option>Ontario</option>
-    <option>Prince Edward Island</option>
-    <option>Quebec</option>
-    <option>Saskatchewan</option>
-    <option>Yukon</option>
+    <option>{{include.option_1}}</option>
+    <option>{{include.option_2}}</option>
+    <option>{{include.option_3}}</option>
+    <option>{{include.option_4}}</option>
+    <option>{{include.option_5}}</option>
+    <option>{{include.option_6}}</option>
+    <option>{{include.option_7}}</option>
+    <option>{{include.option_8}}</option>
+    <option>{{include.option_9}}</option>
+    <option>{{include.option_10}}</option>
+    <option>{{include.option_11}}</option>
+    <option>{{include.option_12}}</option>
+    <option>{{include.option_13}}</option>
+    <option>{{include.option_14}}</option>
   </select>
 </div>
