--- a/checkout.html
+++ b/checkout.html
@@ -31,7 +31,7 @@ layout: default
         {% pattern forms/input text="City" %}
       </div>
       <div class="island-1-4 pad-b unit [ xs-1 s-1 m-1-2 l-1-2 ]">
-        {% pattern forms/provinces %}
+        {% pattern forms/provinces text="Province" %}
       </div>
       <div class="island-1-4 pad-b unit [ xs-1 s-1 m-1-2 l-1-2 ]">
         {% pattern forms/input text="Country" %}
