Add options to provinces pattern in checkout.html

--- a/checkout.html
+++ b/checkout.html
@@ -31,7 +31,7 @@ layout: default
         {% pattern forms/input text="City" %}
       </div>
       <div class="island-1-4 pad-b unit [ xs-1 s-1 m-1-2 l-1-2 ]">
-        {% pattern forms/provinces text="Province" %}
+        {% pattern forms/provinces text="Provinces" option_1="Select One" option_2="Alberta" option_3="British Columbia" option_4="Manitoba" option_5="New Brunswick" option_6="Newfoundland & Labrador" option_7="Northwest Territories" option_8="Nova Scotia" option_9="Nunavut" option_10="Ontario" option_11="Prince Edward Island" option_12="Quebec" option_13="Saskatchewan" option_14="Yukon" %}
       </div>
       <div class="island-1-4 pad-b unit [ xs-1 s-1 m-1-2 l-1-2 ]">
         {% pattern forms/input text="Country" %}
