Adds the private policy page

--- a/_patterns/cards/call-to-action-banner.html
+++ b/_patterns/cards/call-to-action-banner.html
@@ -3,8 +3,8 @@
     <img class="img-flex" src="/images/banners/{{include.image}}" alt="">
   </div>
   <div class="unit xs-2-3 s-1-2 cta-banner-container absolute text-center pin-c">
-    <h2 class="push-0 gutter-1-2 pad-t-1-2 pad-b">{{include.heading}}</h2>
-    <p class="gutter-1-2 kilo">{{include.text}}</p>
+    <h2 class="push-0 pad-t-1-2 pad-b tena">{{include.heading}}</h2>
+    <p class="kilo">{{include.text}}</p>
     <div class="text-center pad-b">
       {% pattern buttons/basic text="See collection!" url="/products/" %}
     </div>
