--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -12,16 +12,13 @@
         <h3 class="kilo bold push-1-4">Site Map</h3>
         <ul class="list-group block push-0">
           <li>
-            <a href="index.html">About</a>
+            <a href="/products">Shop</a>
           </li>
           <li>
-            <a href="rescues.html">Shop</a>
+            <a href="/checkout">Cart</a>
           </li>
           <li>
-            <a href="adopt.html">Care Guide</a>
-          </li>
-          <li>
-            <a href="#">Cart</a>
+            <a href="/privacypolicy">Privacy Policy</a>
           </li>
         </ul>
       </div>
