--- a/_patterns/forms/confirmation.html
+++ b/_patterns/forms/confirmation.html
@@ -1,7 +1,7 @@
 <div>
   <input type="checkbox" id="agree" required>
   <label for="agree">{{include.text}}</label>
-  <div class="text pad-t-2">
+  <div class="text pad-t-2 text-center">
     {% pattern buttons/light text="Purchase" url="/products/" %}
   </div>
 </div>
