--- a/_patterns/header/main-navigation.html
+++ b/_patterns/header/main-navigation.html
@@ -8,10 +8,8 @@
     <div class="unit xs-1 s-1 m-1 l-3-4 pad-b-1-4">
       <nav class="pad-b-1-2">
         <ul class="nav-container text-upper list-group milli island push-0">
-          <li class="{% if page.highlight_nav == 'about' %}current{% endif %}"><a href="#">About</a></li>
           <li class="{% if page.highlight_nav == 'shop' %}current{% endif %}"><a href="/products">Shop</a></li>
-          <li class="{% if page.highlight_nav == 'cart' %}current{% endif %}"><a href="#">Care Guide</a></li>
-          <li class="{% if page.highlight_nav == 'cart' %}current{% endif %}"><a href="#">Cart</a></li>
+          <li class="{% if page.highlight_nav == 'cart' %}current{% endif %}"><a href="/checkout">Cart</a></li>
         </ul>
       </nav>
     </div>
