--- a/checkout.html
+++ b/checkout.html
@@ -1,9 +1,9 @@
 ---
 layout: default
 ---
-<div class="grid gutter">
+<div class="grid gutter-2 form-container">
   <div class="pad-b unit [ xs-1 ]">
-    <div class="grid">
+    <div class="grid pad-t-2">
       <div class="island-1-4 unit [ xs-1 ]">
         <h2 class="push-none pad-b-1-8">Contact Information</h2>
       </div>
@@ -46,7 +46,7 @@ layout: default
         {% pattern forms/textarea text="Write a message" %}
       </div>
     </div>
-    <div class="grid pad-t">
+    <div class="grid pad-t pad-b-2">
       <div class="island-1-4 pad-b unit [ xs-1 ]">
         {% pattern forms/confirmation text="I agree with the information above" %}
       </div>
