--- a/index.html
+++ b/index.html
@@ -2,22 +2,21 @@
 layout: default
 ---
 
-{% pattern cards/call-to-action-banner heading="Explore our gardens!" text="Find a plant or garden that best suits your home and lifestyle. We garantee that you will find one that you love." image="cta-banner1.svg" %}
+{% pattern cards/call-to-action-banner heading="Explore our gardens!" text="Find a plant or garden that best suits your home and lifestyle. We garantee that you will find one that you love." image="home-banner.jpg" %}
 
 <div class="grid grid-middle image-card-container pad-b-2">
   <div class="unit xs-1 m-1 l-1-3">
-    {% pattern cards/image-card heading="Small Gardens" text="These small gardens are the smallest we sell, sitting in a 4 by 5 box. Great pieces to add on desks or end tables, at great prices." image="smallgarden4.jpg" %}
+    {% pattern cards/image-card heading="Original Gardens" text="These small gardens are the smallest we sell, sitting in a 4 by 5 box. Great pieces to add on desks or end tables, at great prices." image="smallgarden4.jpg" %}
   </div>
   <div class="unit xs-1 s-1 m-1 l-1-3">
-    {% pattern cards/image-card heading="Original Gardens" text="Three beautiful succulents boxed perfectly in a 9 by 4 inch box. This piece would be great for any center piece for any occasion." image="originalgarden1.jpg" %}
+    {% pattern cards/image-card heading="Premium Gardens" text="Three beautiful succulents boxed perfectly in a 9 by 4 inch box. This piece would be great for any center piece for any occasion." image="originalgarden1.jpg" %}
   </div>
   <div class="unit xs-1 s-1 m-1 l-1-3">
-    {% pattern cards/image-card heading="Deluxe Gardens" text="These deluxe gardens are the biggest boxed plants we sell. Coming in a 15 by 6 box. Boxed with a mixture of succulents" image="deluxegarden1.jpg" %}
+    {% pattern cards/image-card heading="Deluxe Gardens" text="These deluxe gardens are the biggest boxed plants we sell. Coming in a 15 by 6 box. Boxed with a mixture of succulents." image="deluxegarden1.jpg" %}
   </div>
 </div>
 
-<div class="pad-b">
-  {% pattern sections/sections %}
-</div>
+{% pattern sections/sections %}
+
 
 {% pattern cards/sectional-banner %}
