--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -1,40 +1,12 @@
-<footer role="contentinfo" class="footer">
-    <div class="grid max-width micro pad-top gutter">
-      <div class="unit xs-1 s-1 m-1-3 l-1-3 push">
-        <h3 class="kilo bold push-1-4">Visit Us</h3>
-        <ul class="list-group">
-          <li>GreenGardens</li>
-          <li>135 Laurier St. Casselman, ON</li>
-          <li>613-869-8116</li>
-        </ul>
+<footer role="contentinfo">
+  <section class="gutter-1-2">
+    <div class="grid push">
+      <div class="unit xs-1 s-1 m-1-2 push-1-2 button-left">
+        {% pattern buttons/basic text="See collection!" url="/products/" %}
       </div>
-      <div class="unit xs-1 s-1 m-1-3 l-1-3 push">
-        <h3 class="kilo bold push-1-4">Site Map</h3>
-        <ul class="list-group block push-0">
-          <li>
-            <a href="/products">Shop</a>
-          </li>
-          <li>
-            <a href="/checkout">Cart</a>
-          </li>
-          <li>
-            <a href="/privacypolicy">Privacy Policy</a>
-          </li>
-        </ul>
-      </div>
-      <div class="unit xs-1 s-1 m-1-3 l-1-3 push">
-        <h3 class="kilo bold push-1-4">Social Media</h3>
-        <ul class="list-group">
-          <li>
-            <a href="https://www.facebook.com/">Facebook</a>
-          </li>
-          <li>
-            <a href="https://www.instagram.com/?hl=en">Instagram</a>
-          </li>
-          <li>
-            <a href="https://twitter.com/?lang=en">Twitter</a>
-          </li>
-        </ul>
+      <div class="unit xs-1 s-1 m-1-2 button-right">
+        {% pattern buttons/basic text="See collection!" url="/products/" %}
       </div>
     </div>
-  </footer>
+    <div class="grid gutter-1-2">
+      <div class="unit xs-1 s-1 m-1-2 l-1-4">
