--- a/_patterns/footer/footer.html
+++ b/_patterns/footer/footer.html
@@ -2,10 +2,10 @@
   <section class="gutter-1-2">
     <div class="grid push">
       <div class="unit xs-1 s-1 m-1-2 push-1-2 button-left">
-        {% pattern buttons/basic text="See collection!" url="/products/" %}
+        {% pattern buttons/light text="See collection!" url="/products/" %}
       </div>
       <div class="unit xs-1 s-1 m-1-2 button-right">
-        {% pattern buttons/basic text="See collection!" url="/products/" %}
+        {% pattern buttons/light text="See collection!" url="/products/" %}
       </div>
     </div>
     <div class="grid gutter-1-2">
